# project-templates

./: .gitignore  LICENSE  README.md  commitlint.config.js  package-lock.json  package.json
.claude/: settings.json
.claude/commands/openspec/: archive.md  proposal.md
.husky/: pre-commit
bun-api-fe-review-geojson/: .env.example  .gitignore  CLAUDE.md  README.md  REPO_MAP.md  cypress.config.ts  index.ts  package.json  showboat.md  showboat_agent-browser.md  tsconfig.json
bun-api-fe-review-geojson/.claude/commands/opsx/: archive.md  continue.md  ff.md  new.md  sync.md
bun-api-fe-review-geojson/.claude/skills/openspec-archive-change/: SKILL.md
bun-api-fe-review-geojson/.claude/skills/openspec-continue-change/: SKILL.md
bun-api-fe-review-geojson/.claude/skills/openspec-ff-change/: SKILL.md
bun-api-fe-review-geojson/.claude/skills/openspec-new-change/: SKILL.md
bun-api-fe-review-geojson/.claude/skills/openspec-sync-specs/: SKILL.md
bun-api-fe-review-geojson/cypress/: vite.config.ts
bun-api-fe-review-geojson/cypress/component/: BasemapSelector.cy.tsx  FeatureTable.cy.tsx  MapShell.cy.tsx
bun-api-fe-review-geojson/cypress/e2e/: review-flow.cy.ts
bun-api-fe-review-geojson/cypress/support/: component-index.html  component.ts  e2e.ts
bun-api-fe-review-geojson/data/: basemaps.json
bun-api-fe-review-geojson/data/layers/: sample.geojson
bun-api-fe-review-geojson/evals/: README.md  results.json  run-evals.ts
bun-api-fe-review-geojson/scripts/: seed.ts  surf-verify.ts
bun-api-fe-review-geojson/src/api/: db.ts  exports.ts  features.ts  index.ts  layers.ts  schemas.ts
bun-api-fe-review-geojson/src/client/: index.html  vite.config.ts
bun-api-fe-review-geojson/src/client/src/: appInspect.ts  config.ts  main.tsx  routeTree.gen.ts
bun-api-fe-review-geojson/src/types/: index.ts
bun-api-fe-review-geojson/tests/unit/: api.test.ts  parsers.test.ts
bun-api-fe-review-geojson/tests/unit/fixtures/: sample-locations.json
bun-cli/: README.md  package.json  tsconfig.json
bun-cli/e2e-tests/: cli.e2e.test.ts
bun-cli/integration-tests/: cli.test.ts
bun-cli/src/: cli.ts  main.test.ts
docs/ai/01_geospacial_analysis/: input.md  osm-geo-stack.md  research.md
fe-react-mbx-map/: .gitignore  README.md  REPO_MAP.md  cypress.config.ts  index.html  package-lock.json  package.json
fe-react-mbx-map/cypress/component/: Map.cy.tsx
fe-react-mbx-map/cypress/e2e/: map.cy.ts
fe-react-mbx-map/cypress/support/: component.tsx
fe-react-mbx-map/src/components/: Map.tsx
fe-react-mbx-map/src/hooks/: useMap.ts
fe-react-mbx-map/src/styles/: map.css
fe-react-mbx-map/tests/unit/: utils.test.ts
nodejs-ts-cli/: README.md  package-lock.json  package.json  tsconfig.json
nodejs-ts-cli/e2e-test/: cli.e2e.test.ts
nodejs-ts-cli/integration-tests/cli/: cli.test.ts
nodejs-ts-cli/src/: main.test.ts  main.ts
openspec/: AGENTS.md  project.md
openspec/changes/add-bun-api-fe-review-geojson-template/: design.md  proposal.md  tasks.md
openspec/changes/add-bun-cli-template/: proposal.md  tasks.md
openspec/changes/add-fe-react-mbx-map-template/: proposal.md  tasks.md
openspec/changes/add-python-cli-template/: tasks.md
openspec/changes/add-python-geo-cli-template/: design.md  tasks.md
openspec/changes/add-refined-geo-visualization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-07-add-python-cli-template/: proposal.md
openspec/changes/archive/2025-12-24-add-python-geo-cli-template/: proposal.md  tasks.md
openspec/changes/archive/2025-12-24-add-refined-geo-visualization/: tasks.md
openspec/changes/archive/2025-12-25-add-bun-cli-template/: tasks.md
openspec/specs/basemap-selector/: spec.md
openspec/specs/bun-api-fe-review-geojson/: spec.md
openspec/specs/bun-cli-template/: spec.md
openspec/specs/fe-react-mbx-map/: spec.md
openspec/specs/python-cli-template/: spec.md
openspec/specs/python-geo-cli/: spec.md
openspec/specs/python-geo-visualization/: spec.md
python-cli/: .gitignore  Makefile  README.md  pyproject.toml
python-cli/e2e-tests/: __init__.py  test_cli_e2e.py
python-cli/integration-tests/: __init__.py  test_cli.py
python-cli/src/python_cli/: __init__.py  cli.py  main.py  models.py
python-cli/tests/: __init__.py  conftest.py  test_main.py
python-geo-cli/: .gitignore  Makefile  README.md  example.env  pyproject.toml
python-geo-cli/data/example/: export.geojson
python-geo-cli/e2e-tests/: README.md  __init__.py  test_geo_cli_e2e.py
python-geo-cli/integration-tests/: __init__.py  test_viz_integration.py
python-geo-cli/notebooks/: 01_getting_started.ipynb
python-geo-cli/src/geo_cli/: __init__.py
python-geo-cli/src/geo_cli/cli/: __init__.py  download.py  main.py  process.py  visualize.py
python-geo-cli/src/geo_cli/core/: __init__.py  downloader.py  processor.py  spatial_ops.py
python-geo-cli/src/geo_cli/models/: __init__.py  config.py
python-geo-cli/src/geo_cli/utils/: env.py  logging.py  validation.py
python-geo-cli/src/geo_cli/viz/: __init__.py  basemaps.py  indexer.py  kepler_maps.py  renderer.py
python-geo-cli/tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_viz.py
(+28 files in other folders)
