[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_cli"]

[project]
name = "python-geo-cli-template"
version = "0.1.0"
description = "A modern Python CLI template for geospatial analysis using SedonaDB, QuackOSM, and KeplerGL"
authors = [
    {name = "Template Author", email = "author@example.com"},
]
dependencies = [
    # Core CLI framework
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.7.0",

    # Primary spatial engine
    "sedonadb>=0.2.0",

    # OSM data fetching
    "quackosm>=0.16.4",

    # Spatial data operations
    "geopandas>=1.0.0",
    "pyogrio>=0.10.0",
    "shapely>=2.0.0",

    # Data format handling
    "pyarrow>=16.0.0",
    "pandas>=2.0.0",

    # Environment variables
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
viz = [
    "keplergl==0.3.7",  # Web-based geospatial visualization
    "matplotlib>=3.8.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.0",
    "ipywidgets>=8.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.scripts]
geo-cli = "geo_cli.cli.main:main"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.10.0",
    "keplergl==0.3.7",
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
filterwarnings = [
    "ignore::DeprecationWarning:pyproj.transformer:",
    "ignore:Conversion of an array with ndim > 0 to a scalar is deprecated:DeprecationWarning",
]
testpaths = [
    "tests",
    "integration-tests",
    "e2e-tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/integration-tests/*",
    "*/e2e-tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # use raise from specified exception
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["geo_cli"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"